--- a/appinfo.json
+++ b/appinfo.json
@@ -1,10 +1,10 @@
 {
-    "vendor": "Quzu",
+    "vendor": "Exo",
     "largeIcon": "images/app_launcher_lg.png",
     "icon": "images/app_launcher_lg.png",
     "main": "index.html",
-    "id": "quzuplayer.lg",
-    "title": "Quzu TV IPTV m3u player",
+    "id": "exoplayer.lg",
+    "title": "Exo TV IPTV m3u player",
     "type": "web",
     "resolution": "1920x1080",
     "version": "1.0.0",
