--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "workspace",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "IS a MEDIA PLAYER",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "node tools/sync-version.cjs",
+    "lg:package": "node tools/package-webos-app.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,5 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@webos-tools/cli": "^3.2.1",
+    "archiver": "^7.0.1",
+    "minimatch": "^10.0.3",
+    "rimraf": "^6.0.1"
   }
 }
