--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.12.2",
-    "express": "^5.1.0",
-    "http-proxy-middleware": "^3.0.5"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@webos-tools/cli": "^3.2.1",
